# MyLibraries

./: .gitignore
MyInstalledLibs/include/: GenerateRandom.h  ReadNumber.h  mylib1.h
MyInstalledLibs/lib/: MyFuncHubLib2.lib
MyLibraries/MyFuncHubLib2/: MyFuncHubLib.sln
MyLibraries/MyFuncHubLib2/MyFuncHubLib2/: GenerateRandom.cpp  GenerateRandom.h  MyFuncHubLib2.vcxproj  MyFuncHubLib2.vcxproj.filters  ReadNumber.cpp  ReadNumber.h  pch.h
MyLibraries/MyFuncHubLib2/MyFuncHubLib2/x64/Debug/MyFuncHubLib2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  MyFuncHubLib2.lastbuildstate
MyLibraries/MyFuncHubLib2/x64/Debug/: MyFuncHubLib2.idb
MyLibraries/MyLib1/: CMakeLists.txt
MyLibraries/MyLib1/src/: MyReadLib.cpp
